[gd_scene load_steps=19 format=2]

[ext_resource path="res://worlds/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilemap_world.tres" type="TileSet" id=2]
[ext_resource path="res://art/breakable-items/jar/items/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/breakable-items/jar/items/Sign.tscn" type="PackedScene" id=4]
[ext_resource path="res://interactive_elements/Portal2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://worlds/World.gd" type="Script" id=6]
[ext_resource path="res://interactive_elements/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/backgrounds/ParallaxBackground.tscn" type="PackedScene" id=8]
[ext_resource path="res://worlds/camera/Camera.tscn" type="PackedScene" id=9]
[ext_resource path="res://worlds/world1/World1.tscn" type="PackedScene" id=10]
[ext_resource path="res://interactive_elements/ladder/Ladder.tscn" type="PackedScene" id=11]
[ext_resource path="res://art/platforms/cactus/cactus.tscn" type="PackedScene" id=12]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://worlds/camera/ShakeCamera2D.tscn" type="PackedScene" id=14]
[ext_resource path="res://game_elements/HUD.tscn" type="PackedScene" id=15]
[ext_resource path="res://art/Door/Tower.tscn" type="PackedScene" id=17]
[ext_resource path="res://interactive_elements/Hplatform.tscn" type="PackedScene" id=18]
[ext_resource path="res://worlds/BigCoin.tscn" type="PackedScene" id=20]

[node name="World" type="Node2D"]
script = ExtResource( 6 )

[node name="HUD" parent="." instance=ExtResource( 15 )]

[node name="OptionsMenu" parent="HUD" instance=ExtResource( 13 )]
visible = false
position = Vector2( 120, 80 )

[node name="Camera" parent="." instance=ExtResource( 9 )]

[node name="Ladder" parent="." instance=ExtResource( 11 )]
position = Vector2( 231.825, 75.182 )

[node name="Ladder2" parent="." instance=ExtResource( 11 )]
position = Vector2( 231.825, 59.182 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 190, 20 )

[node name="ParallaxBackground" parent="Player" instance=ExtResource( 8 )]
offset = Vector2( -64, -42 )
transform = Transform2D( 1, 0, 0, 1, -64, -42 )

[node name="ShakeCamera2D" parent="Player" instance=ExtResource( 14 )]
position = Vector2( 0, 0 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, -1 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
collision_mask = 17
format = 1
tile_data = PoolIntArray( -196603, 23, 0, -131067, 32, 0, -65535, 23, 0, 1, 32, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 196608, 131073, 33, 0, 131074, 36, 0, 131075, 36, 0, 131076, 36, 0, 131077, 36, 0, 131078, 36, 0, 131079, 34, 0, 131081, 0, 0, 131082, 0, 196610, 131083, 0, 196608, 196617, 0, 0, 196619, 0, 3, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 327690, 35, 0, 393216, 20, 0, 393217, 7, 0, 393218, 11, 0, 393228, 0, 0, 393229, 20, 0, 393230, 22, 0, 458752, 24, 0, 458753, 8, 0, 458754, 12, 0, 458755, 21, 0, 458756, 21, 0, 458757, 9, 0, 458760, 0, 0, 458761, 0, 0, 458764, 0, 0, 458765, 24, 0, 458766, 27, 0, 524288, 24, 0, 524289, 26, 0, 524290, 26, 0, 524291, 39, 0, 524292, 39, 0, 524293, 13, 0, 524294, 21, 0, 524295, 22, 0, 524301, 24, 0, 524302, 27, 0, 589824, 29, 0, 589825, 31, 0, 589826, 30, 0, 589827, 30, 0, 589828, 30, 0, 589829, 30, 0, 589830, 30, 0, 589831, 37, 0, 589832, 36, 0, 589833, 36, 0, 589834, 36, 0, 589835, 36, 0, 589836, 34, 0, 589837, 29, 0, 589838, 37, 0 )

[node name="Sign" parent="." instance=ExtResource( 4 )]
position = Vector2( 58, 102 )

[node name="Portal2D" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 8, 84 )

[node name="Area2D2" parent="." instance=ExtResource( 7 )]
position = Vector2( 213.648, 77.6335 )
scale = Vector2( 1, 10 )

[node name="Area2D" parent="." instance=ExtResource( 7 )]
position = Vector2( -5.37503, 77.0035 )
scale = Vector2( 1, 10 )

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 120, 15 )

[node name="Coin2" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 150, 20 )

[node name="Coin3" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 160, 40 )

[node name="cactus" parent="." instance=ExtResource( 12 )]

[node name="camera_target" type="Node2D" parent="."]
position = Vector2( 300, 80 )

[node name="Tower" parent="." instance=ExtResource( 17 )]
position = Vector2( 146.278, 62.9322 )
target_scene = ExtResource( 10 )

[node name="Coin" parent="." instance=ExtResource( 20 )]
position = Vector2( 23.0567, 73.1099 )

[node name="Hplatform" parent="." instance=ExtResource( 18 )]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
